# vasak-desktop

./: .coderabbit.yaml  .eslintrc.json  .gitignore  .sonarcloud.properties  BUSQUEDA_GLOBAL.md  FUNCIONALIDADES_FALTANTES.md  KEYBOARD_MAPPING.md  OS_CONFIG_IMPLEMENTATION.md  README.md  biome.json  eslint.config.js  index.html  lynx-desktop  package.json  sonar-project.properties  tsconfig.json  vasak-desktop  vasak-desktop.py  vite.config.ts  vite.config.ts.old
VSKDesktop/: VSKDesktopWindow.py
css/: clock.css  style.css
js/: App.js  global.js  main.js  shorcut.js
src/: App.vue  DesktopBinding.py  DesktopWindow.py  desktop_binding.py  desktop_window.py  main.ts  style.css
src-tauri/: Cargo.toml  check_output.txt  clippy-report.json  tauri.conf.json  vasak-desktop-shell.desktop.hbs
src-tauri/capabilities/: default.json
src-tauri/src/: app_url.rs  audio.rs  battery.rs  brightness.rs  commands.rs  constants.rs  dbus_service.rs  error.rs  eventloops.rs  gtk_utils.rs  lib.rs  logger.rs  main.rs  menu_manager.rs  monitor_manager.rs  music.rs  notifications.rs  platform_shortcuts.rs  search.rs  structs.rs  window_properties.rs
src-tauri/src/applets/: audio.rs  battery.rs  bluetooth.rs  brightness.rs  manager.rs  mod.rs  music.rs  network.rs  notifications.rs  tray.rs
src-tauri/src/commands/: applications.rs  audio.rs  battery.rs  bluetooth.rs  brightness.rs  control_center.rs  file_manager.rs  logger.rs  menu.rs  mod.rs  music.rs  network.rs  notifications.rs  panel.rs  runner.rs  search.rs  search_window.rs  session.rs  shortcuts.rs  system_config.rs  system_info.rs  theme.rs  tray.rs  window_manager.rs
src-tauri/src/tray/: dbus_menu.rs  menu_parser.rs  mod.rs  sni_watcher.rs
src-tauri/src/utils/: command.rs  mod.rs  performance.rs  search.rs
src-tauri/src/utils/shortcuts/: mod.rs  platform_shortcuts.rs  shortcuts.rs  shortcuts_handler.rs
src-tauri/src/window_manager/: mod.rs  wayfire_ipc.rs  wayland.rs  x11.rs
src-tauri/src/windows_apps/: control_center.rs  desktop.rs  menu.rs  mod.rs  panel.rs  wayland_layer.rs
src-tauri/src/windows_apps/applets/: audio_applet.rs  bluetooth_applet.rs  mod.rs  network_applet.rs  tray_popup.rs
src-tauri/src/windows_apps/applications/: configuration.rs  file_manager.rs  mod.rs  search.rs  terminal.rs
src-tauri/tests/: shortcut_mapping_test.rs
ui/: index.html  package.json  vite.config.ts
ui/src/: App.vue  (+1 more)
(+133 files in other folders)
