[package]
name = "vasak-desktop"
version = "0.1.0"
description = "A Vasak Application (template)"
authors = ["Vasak Group", "Joaquin (Pato) Decima"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vasak_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
x11rb = { version = "0.13", optional = true, features = ["allow-unsafe-code"] }
wayland-client = { version = "0.31", optional = true }
wayland-protocols = { version = "0.32", features = ["staging", "client"], optional = true }
wayland-protocols-wlr = { version = "0.3", features = ["client"], optional = true }

freedesktop_entry_parser = "1.3"
gtk = "0.18"
gdk = "0.18"
base64 = "0.22"
tauri-plugin-vicons = "2"
tauri-plugin-config-manager = "2"
tauri-plugin-user-data = "2"
tauri-plugin-opener = "2"
tauri-plugin-network-manager = "2"
tauri-plugin-bluetooth-manager = "2"
zbus = "4"
zvariant = "4"
once_cell = "1.8"
tokio = { version = "1.0", features = ["full"] }
image = "0.25"
futures-util = "0.3"
log = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-positioner = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"

[features]
default = ["x11", "wayland"]
x11 = ["dep:x11rb"]
wayland = ["dep:wayland-client", "dep:wayland-protocols", "dep:wayland-protocols-wlr"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
